# actix-casbin

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: casbin_actor.rs  lib.rs
tests/: test_casbin.rs  test_set_enforcer.rs
