[package]
name = "actix-casbin"
version = "0.4.2"
authors = ["Eason Chai <hackerchai.com@gmail.com>","Cheng JIANG <jiang.cheng@vip.163.com>"]
edition = "2021"
license = "Apache-2.0"
description = "An Actix actor for casbin"
homepage="https://github.com/casbin-rs/actix-casbin"
readme="README.md"

[lib]
name = "actix_casbin"
path = "src/lib.rs"

[dependencies]
actix =  "0.13.0"
casbin = { version = "2.0.9", default-features = false, features = [ "incremental", "cached"] }
actix-casbin-auth = { version = "0.4.4", default-features = false }
tokio = { version = "0.2.22", default-features = false, optional = true }
async-std = { version = "1.11.0", default-features = false, optional = true }
futures = "0.3.21"

[features]
default = ["runtime-async-std"]

runtime-tokio = ["casbin/runtime-tokio", "tokio/sync", "actix-casbin-auth/runtime-tokio"]
runtime-async-std = ["casbin/runtime-async-std", "async-std/std", "actix-casbin-auth/runtime-async-std"]

[dev-dependencies]
tokio = { version = "1.18.1", features = [ "full" ] }
async-std = { version = "1.11.0", features = [ "attributes" ] }
actix-rt = "2.7.0"
